# ticktick-to-todoist

./: README.md  pyproject.toml  requirements.txt
ticktick_to_todoist/: __init__.py  cli.py  converter.py  utils.py
