[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ticktick-to-todoist"
version = "0.1.0"
description = "Convert TickTick CSV exports to Todoist import format"
readme = "README.md"
authors = [{name = "Mikkel Harrild", email = "eztar.dk@gmail.com"}]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "click>=8.0.0",
    "rich>=10.0.0",
]
requires-python = ">=3.7"

[project.scripts]
ticktick-to-todoist = "ticktick_to_todoist.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
